changesssss add loans
